--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,8 +2,8 @@
 
 FROM python:3.8-slim
 WORKDIR /app
+COPY requirements.txt requirements.txt
+RUN pip install -r requirements.txt
 COPY . . 
-RUN pip install flask redis
 EXPOSE 5002 
 CMD ["python", "app.py"]
-
