--- a/app/dockercompose.yml
+++ b/app/dockercompose.yml
@@ -1,10 +1,29 @@
 version: "3.8"
 services:
   web:
-    image: app-flask-image
+    build: .
     ports:
       - "5002:5002"
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    deploy:
+      replicas: 3
     depends_on:
       - redis
   redis:
     image: redis:latest
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - web
+volumes:
+  redis-data:
